--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -18,13 +18,10 @@ spring.datasource.hikari.idle-timeout=60000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=5000
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST:127.0.0.1}:${DB_PORT:5434}/${DB_NAME:site}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:root}
+spring.datasource.driver-class-name = org.testcontainers.jdbc.ContainerDatabaseDriver
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.liquibase.change-log=liquibase/changelog/changelog-master.yaml
+
